--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 </header>
 
 <div>
-    <h3>Vintage Camera Sticker</h3>
+   <div class="sticker-card">
+    <h3>VINTAGE CAM</h3>
     <p>Price: ₹40</p>
-    <button>Buy on WhatsApp</button>
+    <button>BUY ON WHATSAPP</button>
 </div>
 </body>
 </html>
