--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <p>Coming Soon!</p>
 </header>
 
-<div>
-   <div class="sticker-card">
+<div class="sticker-card">
+    <img src="sticker1.png" alt="My First Sticker" style="width: 100%; height: auto;">
+    
     <h3>VINTAGE CAM</h3>
     <p>Price: ₹40</p>
     <button>BUY ON WHATSAPP</button>
