--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 
 <div class="sticker-card">
     <img src="sticker1.png" alt="My First Sticker" style="width: 100%; height: auto;">
-    
-    <h3>VINTAGE CAM</h3>
+    <h3>GOOD BOY</h3>
     <p>Price: ₹40</p>
-    <button>BUY ON WHATSAPP</button>
+    
+    <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Good%20Boy%20sticker." target="_blank" style="text-decoration: none;">
+        <button>BUY ON WHATSAPP</button>
+    </a>
 </div>
 </body>
 </html>
