--- a/index.html
+++ b/index.html
@@ -3,23 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Retro Sticker Shop</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-    <h1>Retro Sticker Shop</h1>
-    <p>Coming Soon!</p>
+<header style="text-align: center; padding: 40px; background-color: #fdfaf1; border-bottom: 3px solid #2c2c2c;">
+    <h1 style="font-size: 3rem; margin-bottom: 10px;">SUMIT'S RETRO SHOP</h1>
+    <p style="font-style: italic; color: #ff6b6b;">Hand-picked Anime & Vintage Aesthetics</p>
 </header>
-
-<div class="sticker-card">
-    <img src="sticker1.png" alt="My First Sticker" style="width: 100%; height: auto;">
-    <h3>GOOD BOY</h3>
-    <p>Price: ₹40</p>
     
-    <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Good%20Boy%20sticker." target="_blank" style="text-decoration: none;">
-        <button>BUY ON WHATSAPP</button>
-    </a>
-</div>
+    <div class="shop-grid">
+        <div class="sticker-card">
+            <img src="sticker/01-chopper.jpg" alt="Chopper">
+            <h3>CHOPPER VIBE</h3>
+            <p>Price: ₹10</p>
+            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Chopper%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
+        </div>
+
+        <div class="sticker-card">
+            <img src="sticker/02-yamato.jpg" alt="Yamato">
+            <h3>YAMATO PRIDE</h3>
+            <p>Price: ₹40</p>
+            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Yamato%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
+        </div>
+
+        <div class="sticker-card">
+            <img src="sticker/03-zoro.jpg" alt="Zoro">
+            <h3>ZORO STYLE</h3>
+            <p>Price: ₹40</p>
+            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Zoro%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
+        </div>
+
+        <div class="sticker-card">
+            <img src="sticker/04-luffy-shock.jpg" alt="Luffy">
+            <h3>SHOCKED LUFFY</h3>
+            <p>Price: ₹40</p>
+            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Shocked%20Luffy%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
+        </div>
+
+        <div class="sticker-card">
+            <img src="sticker/05-nami.jpg" alt="Nami">
+            <h3>WINKING NAMI</h3>
+            <p>Price: ₹40</p>
+            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Nami%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
+        </div>
+
+        <div class="sticker-card">
+            <img src="sticker/06-hancock.jpg" alt="Hancock">
+            <h3>BOA HANCOCK</h3>
+            <p>Price: ₹40</p>
+            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Hancock%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
+        </div>
+
+        <div class="sticker-card">
+            <img src="sticker/07-sanji.jpg" alt="Sanji">
+            <h3>VINSMOKE SANJI</h3>
+            <p>Price: ₹40</p>
+            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Sanji%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
+        </div>
+
+        <div class="sticker-card">
+            <img src="sticker/08-luffy-retro.jpg" alt="Luffy Retro">
+            <h3>RETRO LUFFY</h3>
+            <p>Price: ₹40</p>
+            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Retro%20Luffy%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
+        </div>
+
+        <div class="sticker-card">
+            <img src="sticker/09-ace.jpg" alt="Ace">
+            <h3>FIRE FIST ACE</h3>
+            <p>Price: ₹40</p>
+            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Ace%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
+        </div>
+
+        <div class="sticker-card">
+            <img src="sticker/10-usopp.jpg" alt="Usopp">
+            <h3>SNIPER USOPP</h3>
+            <p>Price: ₹40</p>
+            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Usopp%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
+        </div>
+    </div>
+
 </body>
 </html>
