--- a/index.html
+++ b/index.html
@@ -3,86 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retro Sticker Shop</title>
+    <title>REDO - Redo Your Style</title>
+    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@800&family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header style="text-align: center; padding: 40px; background-color: #fdfaf1; border-bottom: 3px solid #2c2c2c;">
-    <h1 style="font-size: 3rem; margin-bottom: 10px;">SUMIT'S RETRO SHOP</h1>
-    <p style="font-style: italic; color: #ff6b6b;">Hand-picked Anime & Vintage Aesthetics</p>
-</header>
-    
-    <div class="shop-grid">
-        <div class="sticker-card">
-            <img src="sticker/01-chopper.jpg" alt="Chopper">
-            <h3>CHOPPER VIBE</h3>
-            <p>Price: ₹10</p>
-            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Chopper%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
-        </div>
 
-        <div class="sticker-card">
-            <img src="sticker/02-yamato.jpg" alt="Yamato">
-            <h3>YAMATO PRIDE</h3>
-            <p>Price: ₹40</p>
-            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Yamato%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
+    <header class="main-header">
+        <div class="top-bar">
+            <div class="logo-container">
+                <h1 class="brand-logo">REDO<span>.</span></h1>
+            </div>
+            <div class="header-icons">
+                <span class="icon">🔍</span>
+                <span class="icon">👤</span>
+                <span class="icon cart-icon">🛒 <span class="cart-count">0</span></span>
+            </div>
         </div>
+        <nav class="sub-nav">
+            <ul>
+                <li><a href="#one-piece">One Piece</a></li>
+                <li><a href="#demon-slayer">Demon Slayer</a></li>
+                <li><a href="https://wa.me/917439112798">Custom Order</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        <div class="sticker-card">
-            <img src="sticker/03-zoro.jpg" alt="Zoro">
-            <h3>ZORO STYLE</h3>
-            <p>Price: ₹40</p>
-            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Zoro%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
-        </div>
+    <main class="content-wrapper">
+        <section id="one-piece">
+            <h2 class="section-title">One Piece Collection</h2>
+            <div class="shop-grid">
+                <div class="sticker-card"><img src="one_piece/01-chopper.jpg" alt="Chopper"><h3>CHOPPER</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%2001-Chopper" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="one_piece/02-yamato.jpg" alt="Yamato"><h3>YAMATO</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%2002-Yamato" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="one_piece/03-zoro.jpg" alt="Zoro"><h3>ZORO</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%2003-Zoro" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="one_piece/04-luffy-shock.jpg" alt="Luffy"><h3>SHOCK LUFFY</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%2004-Luffy" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="one_piece/05-nami.jpg" alt="Nami"><h3>NAMI</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%2005-Nami" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="one_piece/06-hancock.jpg" alt="Hancock"><h3>HANCOCK</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%2006-Hancock" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="one_piece/07-sanji.jpg" alt="Sanji"><h3>SANJI</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%2007-Sanji" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="one_piece/08-luffy-retro.jpg" alt="Luffy"><h3>RETRO LUFFY</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%2008-Retro-Luffy" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="one_piece/09-ace.jpg" alt="Ace"><h3>ACE</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%2009-Ace" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="one_piece/10-usopp.jpg" alt="Usopp"><h3>USOPP</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%2010-Usopp" target="_blank"><button>Buy Now</button></a></div>
+            </div>
+        </section>
 
-        <div class="sticker-card">
-            <img src="sticker/04-luffy-shock.jpg" alt="Luffy">
-            <h3>SHOCKED LUFFY</h3>
-            <p>Price: ₹40</p>
-            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Shocked%20Luffy%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
-        </div>
+        <section id="demon-slayer">
+            <h2 class="section-title">Demon Slayer Collection</h2>
+            <div class="shop-grid">
+                <div class="sticker-card"><img src="demon_slayer/01-Inosuke.png" alt="Inosuke"><h3>INOSUKE</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%20DS-Inosuke" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="demon_slayer/02-Mitsuri.png" alt="Mitsuri"><h3>MITSURI</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%20DS-Mitsuri" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="demon_slayer/03-Tanjiro.png" alt="Tanjiro"><h3>TANJIRO</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%20DS-Tanjiro" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="demon_slayer/04-Zenitsu.png" alt="Zenitsu"><h3>ZENITSU</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%20DS-Zenitsu" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="demon_slayer/05-Nezuko.png" alt="Nezuko"><h3>NEZUKO</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%20DS-Nezuko" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="demon_slayer/06-Rengoku.png" alt="Rengoku"><h3>RENGOKU</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%20DS-Rengoku" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="demon_slayer/07-Zenitsu-Action.png" alt="Zenitsu"><h3>ZENITSU ACTION</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%20DS-Zenitsu-Action" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="demon_slayer/08-Nezuko.png" alt="Nezuko"><h3>NEZUKO DEMON</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%20DS-Nezuko-Demon" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="demon_slayer/09-Muichiro.png" alt="Muichiro"><h3>MUICHIRO</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%20DS-Muichiro" target="_blank"><button>Buy Now</button></a></div>
+                <div class="sticker-card"><img src="demon_slayer/10-Sanemi.png" alt="Sanemi"><h3>SANEMI</h3><p>₹10</p><a href="https://wa.me/917439112798?text=I%20want%20DS-Sanemi" target="_blank"><button>Buy Now</button></a></div>
+            </div>
+        </section>
+    </main>
 
-        <div class="sticker-card">
-            <img src="sticker/05-nami.jpg" alt="Nami">
-            <h3>WINKING NAMI</h3>
-            <p>Price: ₹40</p>
-            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Nami%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
+    <footer class="stylish-footer">
+        <div class="footer-grid">
+            <div class="footer-col">
+                <h3 class="footer-logo">REDO<span>.</span></h3>
+                <p>Custom stickers to transform your everyday items [cite: 2026-02-04].</p>
+            </div>
+            <div class="footer-col">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#one-piece">Shop</a></li>
+                    <li><a href="https://wa.me/917439112798">Custom Order</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Support</h4>
+                <ul>
+                    <li><a href="#">Shipping</a></li>
+                    <li><a href="#">Returns</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Contact</h4>
+                <p>support@redo.in</p>
+                <p>Kolkata, India</p>
+            </div>
         </div>
-
-        <div class="sticker-card">
-            <img src="sticker/06-hancock.jpg" alt="Hancock">
-            <h3>BOA HANCOCK</h3>
-            <p>Price: ₹40</p>
-            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Hancock%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
+        <div class="payment-section">
+            <p>We Accept: UPI • Cards • Paytm • PhonePe</p>
         </div>
-
-        <div class="sticker-card">
-            <img src="sticker/07-sanji.jpg" alt="Sanji">
-            <h3>VINSMOKE SANJI</h3>
-            <p>Price: ₹40</p>
-            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Sanji%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
+        <div class="footer-bottom">
+            &copy; 2026 REDO. All rights reserved.
         </div>
-
-        <div class="sticker-card">
-            <img src="sticker/08-luffy-retro.jpg" alt="Luffy Retro">
-            <h3>RETRO LUFFY</h3>
-            <p>Price: ₹40</p>
-            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Retro%20Luffy%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
-        </div>
-
-        <div class="sticker-card">
-            <img src="sticker/09-ace.jpg" alt="Ace">
-            <h3>FIRE FIST ACE</h3>
-            <p>Price: ₹40</p>
-            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Ace%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
-        </div>
-
-        <div class="sticker-card">
-            <img src="sticker/10-usopp.jpg" alt="Usopp">
-            <h3>SNIPER USOPP</h3>
-            <p>Price: ₹40</p>
-            <a href="https://wa.me/917439112798?text=Hi%20Sumit!%20I%20want%20to%20buy%20the%20Usopp%20sticker." target="_blank"><button>BUY ON WHATSAPP</button></a>
-        </div>
-    </div>
+    </footer>
 
 </body>
 </html>
